--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,13 +33,12 @@ dist.jar=${dist.dir}/KinalSmart2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-collections-3.2.1.jar=..\\APIS\\commons-collections-3.2.1.jar
+file.reference.commons-collections-3.2.1.jar=..\\..\\APIS\\commons-collections-3.2.1.jar
 file.reference.commons-digester-2.1.jar=..\\APIS\\commons-digester-2.1.jar
 file.reference.commons-logging-1.1.jar=..\\APIS\\commons-logging-1.1.jar
-file.reference.groovy-all-2.0.1.jar=..\\APIS\\groovy-all-2.0.1.jar
 file.reference.iText-2.1.7.js2.jar=..\\APIS\\iText-2.1.7.js2.jar
 file.reference.jasperreports-5.6.0.jar=..\\Nueva carpeta\\jasperreports-5.6.0.jar
-file.reference.mysql-connector-java-8.0.12.jar-1=C:\\Users\\informatica\\Desktop\\todo esta aca\\IN5bm 2023013\\mysql-connector-java-8.0.12\\mysql-connector-java-8.0.12.jar
+file.reference.mysql-connector-java-8.0.12.jar=..\\..\\mysql-connector-java-8.0.12\\mysql-connector-java-8.0.12.jar
 file.reference.poi-3.7-20101029.jar=..\\APIS\\poi-3.7-20101029.jar
 file.reference.schudt-javafx-datepicker-0.0.2.jar=..\\APIS\\schudt-javafx-datepicker-0.0.2.jar
 includes=**
@@ -48,15 +47,14 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-8.0.12.jar-1}:\
     ${file.reference.jasperreports-5.6.0.jar}:\
     ${file.reference.schudt-javafx-datepicker-0.0.2.jar}:\
     ${file.reference.poi-3.7-20101029.jar}:\
     ${file.reference.iText-2.1.7.js2.jar}:\
-    ${file.reference.groovy-all-2.0.1.jar}:\
     ${file.reference.commons-logging-1.1.jar}:\
     ${file.reference.commons-digester-2.1.jar}:\
-    ${file.reference.commons-collections-3.2.1.jar}
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.mysql-connector-java-8.0.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
