--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,7 +5,12 @@ do.jar=true
 do.jlink=false
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-file.reference.mysql-connector-java-8.0.12.jar-1=C:\\Users\\informatica\\Desktop\\mysql-connector-java-8.0.12\\mysql-connector-java-8.0.12.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\informatica\\Desktop\\APIS\\commons-digester-2.1.jar
+file.reference.commons-logging-1.1.jar=C:\\Users\\informatica\\Desktop\\APIS\\commons-logging-1.1.jar
+file.reference.iText-2.1.7.js2.jar=C:\\Users\\informatica\\Desktop\\APIS\\iText-2.1.7.js2.jar
+file.reference.jasperreports-5.6.0.jar=C:\\Users\\informatica\\Desktop\\APIS\\jasperreports-5.6.0.jar
+file.reference.poi-3.7-20101029.jar=C:\\Users\\informatica\\Desktop\\APIS\\poi-3.7-20101029.jar
+file.reference.schudt-javafx-datepicker-0.0.2.jar=C:\\Users\\informatica\\Desktop\\APIS\\schudt-javafx-datepicker-0.0.2.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
