--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,10 +5,10 @@ do.jar=true
 do.jlink=false
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-file.reference.mysql-connector-java-8.0.12.jar-1=C:\\Users\\informatica\\Desktop\\mysql-connector-java-8.0.12\\mysql-connector-java-8.0.12.jar
+file.reference.mysql-connector-java-8.0.12.jar-1=C:\\Users\\josem\\OneDrive - Fundaci\u00f3n Kinal -Alumnos-\\Desktop\\mysql-connector-java-8.0.12\\mysql-connector-java-8.0.12.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\IEXPLORE.EXE
 jlink.strip=false
-user.properties.file=C:\\Users\\informatica\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\josem\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
